# Cleanse

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/shaders/: bloodfield.wgsl  terrain.wgsl  tissue.wgsl
included/: antibiotics.aseprite  bacteria.aseprite  cancer.aseprite  disinfectant.aseprite  free-healthcare.aseprite  immune-system.aseprite  lvlup-attack.aseprite  lvlup-current-health.aseprite  lvlup-dilatation.aseprite  lvlup-regen.aseprite  lvlup-speed.aseprite  lvlup-total-health.aseprite  parental-leave.aseprite  personal-hygiene.aseprite  preventive-measures.aseprite  sanitation.aseprite  sick-days.aseprite  vaccine.aseprite  virus.aseprite  white-cell.aseprite
src/: assets.rs  bloodfield.rs  camera.rs  cheat.rs  death.rs  main.rs  menu.rs  progress.rs  splash.rs
src/game/: host.rs  immune_system.rs  intro.rs  levelup.rs  mod.rs  oldest.rs  pathogens.rs  player_movement.rs  terrain.rs  tissue.rs  ui.rs  white_cells.rs
wasm/: index.html
