[package]
name = "cleanse"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false


[dependencies]
bevy = { version = "0.6", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_winit",
  "bevy_render",
  "bevy_text",
  "png"
] }

bevy_embedded_assets = { version = "0.2", optional = true }
bevy_asset_loader = { version = "0.9", default-features = false }
bevy_easings = { version = "0.6", default-features = false }
bevy_egui = { version = "0.11", default-features = false }
bevy_rapier2d = "0.12"
bevy_prototype_lyon = "0.4"

# Needed to control log level by feature for release
tracing = { version = "0.1", optional = true }

rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.6", features = [
  "x11",
] }

[features]
default = []
hot = [ "bevy/filesystem_watcher" ]
release = [ "bundled", "tracing/release_max_level_warn" ]
bundled = [ "bevy_embedded_assets" ]
trace = [ "bevy/trace", "bevy/trace_tracy" ]


[patch.crates-io]
bevy = { git = "https://github.com/bevyengine//bevy", branch = "main" }
bevy_easings = { git = "https://github.com/vleue/bevy_easings", branch = "add-as-bundle" }
bevy_egui = { git = "https://github.com/mockersf/bevy_egui", branch = "bevy-main" }
bevy_prototype_lyon = { git = "https://github.com/mockersf/bevy_prototype_lyon", branch = "bevy-main" }
bevy_rapier2d = { git = "https://github.com/mockersf/bevy_rapier", branch = "bevy-main" }
# needed for https://github.com/dimforge/rapier/pull/284
rapier2d = { git = "https://github.com/dimforge/rapier" }

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/bevyengine//bevy", branch = "main" }

[profile.dev.package."*"]
opt-level = 3
