[package]
name = "cleanse"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false


[dependencies]
bevy = { version = "0.6", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_winit",
  "bevy_render",
  "bevy_text",
  "bevy_audio",
  "png",
  "vorbis",
  "bevy_gilrs",
] }

bevy_embedded_assets = { version = "0.2", optional = true }
bevy_asset_loader = { version = "0.9", default-features = false }
bevy_easings = { version = "0.6", default-features = false }
bevy_egui = { version = "0.11", default-features = false }
bevy_rapier2d = { version = "0.12", default-features = false, features = [ "dim2" ] }

# Needed to control log level by feature for release
tracing = { version = "0.1", optional = true }

strum = { version = "0.24", features = ["derive"] }
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.6", features = [
  "x11",
] }

[features]
default = []
hot = [ "bevy/filesystem_watcher" ]
release = [ "bundled", "tracing/release_max_level_warn" ]
bundled = [ "bevy_embedded_assets" ]
trace = [ "bevy/trace", "bevy/trace_tracy" ]


[patch.crates-io]
bevy = { git = "https://github.com/mockersf//bevy", branch = "audio-control-at-start" }
bevy_egui = { git = "https://github.com/mockersf/bevy_egui", branch = "bevy-main" }
bevy_rapier2d = { git = "https://github.com/mockersf/bevy_rapier", branch = "bevy-main" }
# needed for https://github.com/dimforge/rapier/pull/284
rapier2d = { git = "https://github.com/dimforge/rapier" }
egui = { git = "https://github.com/emilk/egui", rev = "b5c119ef1994b42c254193205acc64444c7750c0" }

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/mockersf//bevy", branch = "audio-control-at-start" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.cleanse]
opt-level = 3
